# product-analytics-t6-2

./: .gitignore  README.md  build.sh  deploy.sh  pyproject.toml  telepass.ipynb
.github/workflows/: ci.yml
infra/: cloudfront.tf  domain.tf  main.tf  roles.tf  s3.tf  upload.tf  variables.tf
output/: index.html
scripts/: common.sh
