[project]
name = "t6-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "pytz>=2026.1.post1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scipy-openblas64>=0.3.31.188.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
